fix font loading

--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,31 @@ Software.
       data-site="YOUR_DOMAIN_HERE"
       src="https://api.nepcha.com/js/nepcha-analytics.js"
     ></script>
+    <style>
+      @font-face {
+        font-family: "NTSomic";
+        src: url("%PUBLIC_URL%/fonts/NTSomic-Regular.ttf") format("truetype");
+        font-weight: 400;
+        font-style: normal;
+        font-display: swap;
+      }
+    
+      @font-face {
+        font-family: "NTSomic";
+        src: url("%PUBLIC_URL%/fonts/NTSomic-Medium.ttf") format("truetype");
+        font-weight: 500;
+        font-style: normal;
+        font-display: swap;
+      }
+    
+      @font-face {
+        font-family: "NTSomic";
+        src: url("%PUBLIC_URL%/fonts/NTSomic-Semibold.ttf") format("truetype");
+        font-weight: 600;
+        font-style: normal;
+        font-display: swap;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
